Integrate improvements into Main plugin and address code review feedback
Co-authored-by: aomarai <49348213+aomarai@users.noreply.github.com>